--- a/public/index.css
+++ b/public/index.css
@@ -36,12 +36,20 @@
     color: #ccc;
   }
 
+  .note-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+
   .note {
     background: #fff;
     border-radius: 7px;
     box-shadow: 0 2px 5px #ccc;
     padding: 10px;
     width: 240px;
+    min-height: 100px;
     margin: 16px;
     float: left;
   }
