--- a/public/index.css
+++ b/public/index.css
@@ -6,6 +6,7 @@
   html {
     font-family: 'Poppins', sans-serif;
   }
+  
   body {
     background: #eee;
     padding: 0 16px;
@@ -38,7 +39,7 @@
 
   .note-container {
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     justify-content: center;
   }
 
@@ -49,10 +50,11 @@
     box-shadow: 0 2px 5px #ccc;
     padding: 10px;
     width: 240px;
-    min-height: 100px;
+    /* min-height: 30px; */
     margin: 16px;
     float: left;
   }
+  
   .note h1 {
     font-size: 1.1em;
     margin-bottom: 6px;
